minor dark mode fixes

--- a/styles/breed-compare-search.css
+++ b/styles/breed-compare-search.css
@@ -77,6 +77,10 @@
     background: #dcdcdc;
 }
 
+[data-mode="dark"] .breed-search > .search-bar > .search-results > li.active {
+    background: var(--body-bg-secondary);
+}
+
 .grid > .description > h3 {
     font-weight: bold;
     padding: 20px 0;
